--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 aiogram = "^3.4.1"
 pydantic-settings = "^2.2.1"
 tortoise-orm = "^0.20.0"
+gspread = "^6.0.2"
 
 
 [build-system]
