--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ aiogram = "^3.4.1"
 pydantic-settings = "^2.2.1"
 tortoise-orm = "^0.20.0"
 gspread = "^6.0.2"
+loguru = "^0.7.2"
 
 
 [build-system]
