--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,8 @@ version: '3.8'
 
 services:
   bot:
-    build: 
-      context: .
-      args:
-        - DOCKER_BUILDKIT: 1
+    build: .
     volumes:
       - ./:/app
+    environment:
+      - DOCKER_BUILDKIT=1
